# defi-ai-training-bot

./: .gitignore  README.md  pyproject.toml  requirements.txt  start_bot.py
config/: config.json
rust-engine/: Cargo.toml
rust-engine/src/: lib.rs
src/agents/: execution_manager.py  market_intelligence.py  risk_assessment.py
src/cli/: main.py
src/data/: cache.py  config.py  http_client.py  models.py  registry.py
src/data/onchain/: web3_client.py
src/data/pipelines/: gas_service.py  liquidity_scanner.py  price_oracle.py
src/data/sources/: base.py  coingecko.py  thegraph.py  uniswap_subgraph.py  zerox.py
src/execution/: __init__.py  confirmation_manager.py  safe_engine.py
src/interfaces/: __init__.py
src/interfaces/templates/: dashboard.html
src/risk/: __init__.py
src/strategies/: __init__.py
tests/: test_basic_functionality.py
