[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "defi-ai-trading-bot"
version = "0.1.0"
description = "AI-Powered Multi-Chain DeFi Trading Bot using SpoonOS"
authors = [
    {name = "DeFi Intelligence Collective", email = "babzchizzy27@gmail.com"}
]
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Financial and Insurance Industry",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Office/Business :: Financial :: Investment",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
keywords = ["defi", "trading", "ai", "blockchain", "spoonos"]

dependencies = [
    "spoon-ai-sdk",
    "web3>=6.0.0",
    "eth-account>=0.10.0",
    "requests>=2.31.0",
    "websockets>=11.0.0",
    "numpy>=1.24.0",
    "pandas>=2.0.0",
    "scikit-learn>=1.3.0",
    "fastapi>=0.100.0",
    "uvicorn>=0.23.0",
    "pydantic>=2.0.0",
    "python-dotenv>=1.0.0",
    "click>=8.1.0",
    "rich>=13.5.0",
    "loguru>=0.7.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.1.0",
    "black>=23.7.0",
    "flake8>=6.0.0",
    "mypy>=1.5.0",
    "pre-commit>=3.3.0",
]
ml = [
    "tensorflow>=2.13.0",
    "torch>=2.0.0",
    "plotly>=5.15.0",
    "matplotlib>=3.7.0",
    "seaborn>=0.12.0",
]
database = [
    "sqlalchemy>=2.0.0",
    "alembic>=1.11.0",
    "redis>=4.6.0",
]

[project.urls]
Homepage = "https://github.com/CodeKage25/defi-ai-trading-bot"
Repository = "https://github.com/CodeKage25/defi-ai-trading-bot"
Documentation = "https://github.com/CodeKage25/defi-ai-trading-bot/docs"
"Bug Tracker" = "https://github.com/CodeKage25/defi-ai-trading-bot/issues"

[project.scripts]
defi-bot = "cli.main:main"
bot-cli = "cli.main:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.black]
line-length = 88
target-version = ['py310']
include = '\.pyi?$'

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --cov=src --cov-report=html --cov-report=term-missing"
asyncio_mode = "auto"